# word24

./: LICENSE  README  README.md  word24.cabal
bench/: Benchmark.hs
src/Data/Int/: Int24.hs
src/Data/Word/: Word24.hs
tests/: QCUtils.hs  cleanup.sh  make_hpc.sh  testword24.hs
