Name:		word24
Version:        0.1.0
Cabal-Version:  >= 1.2
Description:	24-bit Word and Int data types.
License:	BSD3
License-file:	LICENSE
Author:		John W. Lato, jwlato@gmail.com
Maintainer:	John W. Lato, jwlato@gmail.com
homepage:       http://inmachina.net/~jwlato/haskell/word24
Stability:	experimental
synopsis:       24-bit word and int types for GHC
category:       Data
build-type:     Simple
cabal-version:  >= 1.2
tested-with:    GHC == 6.10.3
extra-source-files: README, LICENSE

flag splitBase
  description: Choose the new split-up base package.

Library
 Hs-Source-Dirs:        src
 ghc-options:           -O2 -Wall
 if flag(splitBase)
   build-depends:       base >= 3, base < 5
 else
   build-depends:       base < 3
 build-depends:         haskell98
 exposed-modules:       Data.Int.Int24
                        Data.Word.Word24

