name:		word24
version:        0.1.0
synopsis:       24-bit word and int types for GHC
description:	24-bit Word and Int data types.
category:       Data
author:		John W. Lato, jwlato@gmail.com
maintainer:	John W. Lato, jwlato@gmail.com
license:	BSD3
license-file:	LICENSE
homepage:       http://inmachina.net/~jwlato/haskell/word24
tested-with:    GHC == 6.10.3
stability:	experimental

cabal-version:  >= 1.2
build-type:     Simple

extra-source-files:
  README
  LICENSE

flag splitBase
  description: Use the new split-up base package.

Library
 hs-Source-Dirs:
   src

 if flag(splitBase)
   build-depends:
     base >= 3 && < 5
 else
   build-depends:
     base < 3

 build-depends:
   haskell98

 exposed-modules:
   Data.Int.Int24
   Data.Word.Word24

 ghc-options:           -O2 -Wall

source-repository head
  type:     darcs
  location: http://inmachina.net/~jwlato/haskell/word24
